# mavsdk_skywriting

./: CMakeLists.txt  README.md  README.txt
docs/: skywriting_organization.odp
include/: Common.h  LetterWaypoint.h  MissionVector.h  MissionVectorOperations.h  Safeguard.h  Trajectory.h  pid_control.h
include/Primipheral/: Primipheral.h
lib/: CMakeLists.txt  LetterWaypoint.cpp  MissionVector.cpp  Trajectory.cpp
lib/Primipherals/: Primipheral.cpp
logs/: 02_53_56_actuator_controls_0_0.csv  02_53_56_actuator_outputs_0.csv  02_53_56_airspeed_0.csv  02_53_56_battery_status_0.csv  02_53_56_ekf2_innovations_0.csv  02_53_56_ekf2_timestamps_0.csv  02_53_56_estimator_status_0.csv  02_53_56_home_position_0.csv  02_53_56_multirotor_motor_limits_0.csv  02_53_56_offboard_control_mode_0.csv  02_53_56_position_setpoint_triplet_0.csv  02_53_56_rate_ctrl_status_0.csv  02_53_56_sensor_preflight_0.csv  02_53_56_telemetry_status_0.csv  02_53_56_trajectory_setpoint_0.csv  02_53_56_vehicle_air_data_0.csv  02_53_56_vehicle_attitude_0.csv  02_53_56_vehicle_attitude_setpoint_0.csv  02_53_56_vehicle_command_0.csv  02_53_56_vehicle_global_position_0.csv  02_53_56_vehicle_global_position_groundtruth_0.csv  02_53_56_vehicle_gps_position_0.csv  02_53_56_vehicle_land_detected_0.csv  02_53_56_vehicle_local_position_0.csv  02_53_56_vehicle_local_position_groundtruth_0.csv  02_53_56_vehicle_local_position_setpoint_0.csv  02_53_56_vehicle_magnetometer_0.csv  02_53_56_vehicle_rates_setpoint_0.csv  02_53_56_vehicle_status_0.csv  02_53_56_vehicle_status_flags_0.csv  07_25_01_actuator_controls_0_0.csv  07_25_01_actuator_outputs_0.csv  07_25_01_airspeed_0.csv  07_25_01_battery_status_0.csv  07_25_01_ekf2_innovations_0.csv  07_25_01_estimator_status_0.csv  07_25_01_home_position_0.csv  07_25_01_multirotor_motor_limits_0.csv  07_25_01_offboard_control_mode_0.csv  07_25_01_position_setpoint_triplet_0.csv  (+49 more)
src/: CMakeLists.txt  LetterWaypoint.cpp  MissionVector.cpp  MissionVectorOperations.cpp  Safeguard.cpp  Trajectory.cpp  offboard_skywriting_main.cpp  skywriting.cpp
test/: CMakeLists.txt  math_tests.cpp  trajectory_tests.cpp
